# NLAG - Next-Generation Low-Latency Access Gateway
# Root workspace configuration
#
# Architecture Decision: Monorepo with workspace
# - Enables shared dependencies and consistent versioning
# - Facilitates atomic changes across crates
# - Single CI/CD pipeline for all components

[workspace]
resolver = "2"
members = [
    "crates/nlag-common",
    "crates/nlag-agent",
    "crates/nlag-edge",
    "crates/nlag-control",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/nlag/nlag"
authors = ["NLAG Team"]

[workspace.dependencies]
# Async runtime - Tokio is the industry standard for production Rust
tokio = { version = "1.35", features = ["full"] }

# QUIC transport - Quinn is the most mature QUIC implementation in Rust
quinn = "0.11"

# TLS - Rustls for memory-safe TLS 1.3
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1"
rcgen = "0.13"  # Certificate generation for development
webpki-roots = "0.26"

# Serialization - Binary protocol with serde
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"  # Concurrent hashmap for connection registry
parking_lot = "0.12"
pin-project-lite = "0.2"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# Rate limiting
governor = "0.6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dirs = "5.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# Web API (for control plane)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
jsonwebtoken = "9"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compile times for development
opt-level = 0
debug = true
