[package]
name = "nlag-agent"
description = "NLAG Agent - CLI client for exposing local services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "nlag"
path = "src/main.rs"

[dependencies]
nlag-common = { path = "../nlag-common" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# QUIC transport
quinn = { workspace = true }

# TLS
rustls = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = "4.5"

# Configuration
config = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Auth
rpassword = "7.3"
reqwest = { version = "0.12", features = ["json"] }

# Agent config file support
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
url = "2"

# Inspect UI
axum = { workspace = true, features = ["ws"] }

# File server
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
