[package]
name = "nlag-common"
description = "Shared protocol, crypto, and types for NLAG"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Crypto
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
webpki-roots = { workspace = true }

# Async
tokio = { workspace = true }
quinn = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
pin-project-lite = { workspace = true }
tokio-util = { workspace = true }
time = "0.3"
serde_bytes = "0.11"

# Hashing for certificate fingerprints
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
