[package]
name = "nlag-control"
description = "NLAG Control Plane - Authentication and management service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "nlag-control"
path = "src/main.rs"

[dependencies]
nlag-common = { path = "../nlag-common" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "1"

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# JWT
jsonwebtoken = "9"

# Database (PostgreSQL + TimescaleDB for metrics)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"], optional = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = "5.5"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# OAuth/OIDC
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
ring = "0.17"
url = "2"
parking_lot = "0.12"

# Password hashing
bcrypt = "0.15"

# Async traits for dyn compatibility
async-trait = "0.1"

[features]
default = []
postgres = ["sqlx"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
