[package]
name = "nlag-edge"
description = "NLAG Edge - Public ingress proxy server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "nlag-edge"
path = "src/main.rs"

[dependencies]
nlag-common = { path = "../nlag-common" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# QUIC transport
quinn = { workspace = true }

# TLS
rustls = { workspace = true }

# CLI
clap = { workspace = true }

# Configuration
config = { workspace = true }
serde = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }

# Rate limiting
governor = { workspace = true }

# HTTP handling (for HTTP protocol support)
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# JWT authentication
jsonwebtoken = "9"

# Custom domains
rand = { workspace = true }
hex = "0.4"

# ACME/Let's Encrypt client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
ring = "0.17"
x509-parser = "0.16"
pem = "3.0"

# Policy engine
serde_yaml = "0.9"
regex = "1"

# Webhook verification
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
ed25519-dalek = "2.1"

# Basic auth
bcrypt = "0.15"

# Web UI for inspection
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
getrandom = { version = "0.3", features = ["std"] }
urlencoding = "2.1"
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
