[project]
name = "nlag"
version = "0.1.0"
description = "Python SDK for NLAG - Expose local services through secure tunnels"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "NLAG Team", email = "team@nlag.dev" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
keywords = ["tunnel", "ngrok", "networking", "proxy", "development"]
dependencies = [
    "aiohttp>=3.8.0",
    "aioquic>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/splax-s/nlag"
Documentation = "https://docs.nlag.dev/sdks/python"
Repository = "https://github.com/splax-s/nlag"
Changelog = "https://github.com/splax-s/nlag/blob/main/sdks/python/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.black]
target-version = ["py39"]
line-length = 100
